--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-/* .App {
-  text-align: center;
+body {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  background-color: rgb(206, 198, 206);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main {
   display: flex;
-  flex-direction: column;
+  width: 80%;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background: linear-gradient(90deg, red, black, white);
+  padding-left: 15px;
+  padding-right: 15px;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.pokeList {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
+.pokeItem {
+  border-radius: 15px;
+  background-image: url('./pokecard.png');
+  background-size: cover;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  
+}
