--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,37 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 body {
+  width: 100%;
   background-color: rgb(206, 198, 206);
+  font-family: 'Press Start 2P', cursive
 }
 
 main {
   display: flex;
-  width: auto;
-  flex-wrap: nowrap;
-
-  
+  width: 100%;
+  flex-wrap: wrap;
 }
 
 .header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: linear-gradient(90deg, red, black, white);
   padding-left: 15px;
   padding-right: 15px;
+}
+
+h1 {
+  display: block;
+  font-family: 'Press Start 2P', cursive
   
 }
 
-.pokeList {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+.pokelist {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .pokeItem {
@@ -33,4 +42,29 @@ main {
   margin-right: 5px;
   margin-top: 5px;
   margin-bottom: 5px;
+}
+.navBar {
+  height: 25px;
+  font-size: large;
+  padding: 5px;
+}
+
+input {
+  border-radius: 15px;
+  height: 25px;
+  padding: 5px;
+}
+
+select {
+  height: 25px;
+  border-radius: 15px;
+  padding: 5px;
+  background-color: rgba(255, 0, 0, 0.459);
+}
+
+button {
+  height: 25px;
+  border-radius: 15px;
+  padding: 5px;
+  background-color: rgba(255, 0, 0, 0.459);
 }
